--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-webp-html-nosvg": "^1.1.1",
     "gulp-webpcss": "^1.1.1",
     "sass": "^1.62.1",
+    "swiper": "^10.1.0",
     "webp-converter": "2.2.3",
     "webpack": "^5.82.0",
     "webpack-stream": "^7.0.0"
