--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Createx",
+  "name": "createx",
   "homepage": "https://alexanderkhristichenko.github.io/createx/",
   "version": "1.0.0",
   "main": "gulpfile.js",
